feat: update AI menu
